Fixed z-index issue with mobile touch controls

--- a/src/components/maze/Sprite/Sprite.scss
+++ b/src/components/maze/Sprite/Sprite.scss
@@ -8,9 +8,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 100;
-  width: 100%;
-  height: 100%;
+  z-index: 90;
   top: 0;
   right: 0;
   bottom: 0;
